# transmission-rss

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.trss.yml  docker-compose.yml  readme.md
.github/workflows/: deploy.yml
scripts/: cron.sh
src/: anissia.rs  config.rs  lib.rs  main.rs  rule.rs
