[package]
name = "transmission-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
# trname = { path = "../trname" }
trname = { git = "https://github.com/syrflover/trname", rev = "3eee979" }

dotenv = "0.15.0"
futures = "0.3.30"
reqwest = "0.12.5"
rss = { version = "2.0.8", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.120"
serde_yml = "0.0.11"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
transmission-rpc = "0.4.2"
url = "2.5.2"
